--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="CSS/style.css" rel="stylesheet" type="text/css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+    <script src="JS/navbar_script.js" defer></script>
   </head>
 
   <body>
