Add content to index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,25 @@
       </div>
     </nav>
 
+    <h1 id="welcome_text">Пожарна Община Бургас</h1>
+
+    <div class="news">
+      <h1>Новини</h1>
+
+      <table>
+        <tr>
+          <td>
+            <h3>Останете информирани!</h3>
+          </td>
+
+          <td>
+            <a href="#">Covid-19 ситуацията</a> <br>
+            <a href="#">Опции за онлайн обучение</a>
+          </td>
+        </tr>
+      </table>
+    </div>
+
   </body>
 
 </html>
