--- a/index.html
+++ b/index.html
@@ -46,6 +46,42 @@
       </table>
     </div>
 
+    <footer>
+      <table>
+        <tr>
+          <td id="coloumn1">
+            <div class="f-logo"><img src="logo.png"></div>
+
+            <div class="f-links">
+              <ul>
+                <li><a href="#">Регистрация</a></li>
+                <li><a href="#">Контакти</a></li>
+                <li><a href="#">Информация за опасности</a></li>
+                <li><a href="#">Служители</a></li>
+                <li><a href="#">Класации</a></li>
+              </ul>
+            </div>
+          </td>
+
+          <td id="coloumn2">
+            <div class="information">
+              <h4>Пожарна Община Бургас</h4>
+              <p>ул."Александър Велики" 37В, 8000 Възраждане, Бургас</p>
+              <p>056 856 321</p>
+            </div>
+
+            <div class="socials">
+              <ul>
+                <a href="https://www.facebook.com/" target="_blank"><img src="Images/facebook.png"></a>
+                <a href="https://twitter.com/" target="_blank"><img src="Images/twitter.png"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="Images/insta.png"></a>
+              </ul>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </footer>
+
   </body>
 
 </html>
