--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="links">
         <ul>
           <li><a href="index.html">Начало</a></li>
-          <li><a href="#">Информация</a></li>
+          <li><a href="information/index.html">Информация</a></li>
           <li><a href="#">Контакти</a></li>
           <li><a href="#">Регистрация</a></li>
         </ul>
