--- a/information/index.html
+++ b/information/index.html
@@ -19,7 +19,7 @@
   
         <div class="links">
           <ul>
-            <li><a href="index.html">Начало</a></li>
+            <li><a href="/index.html">Начало</a></li>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Контакти</a></li>
             <li><a href="#">Регистрация</a></li>
@@ -93,7 +93,8 @@
                 </div>
               </a>
             </div>
-              </section>
+            <iframe src="https://www.atlistmaps.com/map/10ac31ad-13bd-487e-b13d-c3d58701671b?share=true" allow="geolocation" width="25%" height="500px" frameborder="0" scrolling="no" allowfullscreen></iframe>      
+               </section>
               <section id="sec-2">
                 <div class="content">
                     <a href="#">
@@ -104,6 +105,8 @@
                     </div>
                   </a>
                 </div>
+            <iframe src="https://www.atlistmaps.com/map/10ac31ad-13bd-487e-b13d-c3d58701671b?share=true" allow="geolocation" width="25%" height="500px" frameborder="0" scrolling="no" allowfullscreen></iframe>   
+                  </section>
                   </section>
                 </section>
                 <section id="sec-3">
@@ -115,6 +118,7 @@
                       </div>
                     </a>
                   </div>
+            <iframe src="https://www.atlistmaps.com/map/10ac31ad-13bd-487e-b13d-c3d58701671b?share=true" allow="geolocation" width="25%" height="500px" frameborder="0" scrolling="no" allowfullscreen></iframe>   
                     </section>
                   </section>
                   <section id="sec-4">
