--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="index.html">Начало</a></li>
           <li><a href="information/index.html">Информация</a></li>
           <li><a href="#">Контакти</a></li>
-          <li><a href="#">Регистрация</a></li>
+          <li><a href="HTML/form.html">Регистрация</a></li>
         </ul>
       </div>
     </nav>
@@ -54,7 +54,7 @@
 
             <div class="f-links">
               <ul>
-                <li><a href="#">Регистрация</a></li>
+                <li><a href="HTML/form.html">Регистрация</a></li>
                 <li><a href="#">Контакти</a></li>
                 <li><a href="#">Информация за опасности</a></li>
                 <li><a href="#">Служители</a></li>
