--- a/HTML/form.html
+++ b/HTML/form.html
@@ -5,19 +5,19 @@
 	<link href="..\CSS/form_style.css" rel="stylesheet" type="text/css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-    <script src="..\JS/script.js" defer></script>
+    <script src="..\JS/navbar_script.js" defer></script>
 </head>
 <body>
 
 	<nav class="navbar">
       <div class="logo">The Firestarters</div>
 
-      <a href="#" class="button"><img src="Images/bars.png"></a>
+      <a href="#" class="button"><img src="..\Images/bars.png"></a>
 
       <div class="links">
         <ul>
           <li><a href="..\index.html">Начало</a></li>
-          <li><a href="information/index.html">Информация</a></li>
+          <li><a href="..\information/index.html">Информация</a></li>
           <li><a href="#">Контакти</a></li>
           <li><a href="form.html">Регистрация</a></li>
         </ul>
