Change home page design

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Home</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/style.css" rel="stylesheet" type="text/css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
@@ -20,30 +21,31 @@
       <div class="links">
         <ul>
           <li><a href="index.html">Начало</a></li>
-          <li><a href="information/index.html">Информация</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#">Информация</a></li>
+          <li><a href="HTML/contact.html">Контакти</a></li>
           <li><a href="HTML/form.html">Регистрация</a></li>
         </ul>
       </div>
     </nav>
 
-    <h1 id="welcome_text">Пожарна Община Бургас</h1>
+    <div id="welcome_text">
+      <h1>РСПБЗН-Бургас</h1>
+      <h2>Районни служби „Пожарна безопасност и защита на населението”</h2>
+    </div>
+    
 
-    <div class="news">
-      <h1>Новини</h1>
-
-      <table>
-        <tr>
-          <td>
-            <h3>Останете информирани!</h3>
-          </td>
-
-          <td>
-            <a href="#">Covid-19 ситуацията</a> <br>
-            <a href="#">Опции за онлайн обучение</a>
-          </td>
-        </tr>
-      </table>
+    <div class="content1">
+      <div class="container1">
+        <h1>Имайте доверие в нас!</h1>
+      </div>
+      <div class="container2">
+        <h2>Най-скорошни инциденти</h2>
+        <div class="accidents">
+          <p><img src="Images/notice.png"> Място №1</p>
+          <p><img src="Images/notice.png"> Място №2</p>
+          <p><img src="Images/notice.png"> Място №3</p>
+        </div>
+      </div>
     </div>
 
     <footer>
