--- a/informationPage/index.html
+++ b/informationPage/index.html
@@ -19,7 +19,7 @@
   
         <div class="links">
           <ul>
-            <li><a href="/index.html">Начало</a></li>
+            <li><a href="../index.html">Начало</a></li>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Контакти</a></li>
             <li><a href="#">Регистрация</a></li>
