Fix mistake on form.html

--- a/HTML/form.html
+++ b/HTML/form.html
@@ -3,9 +3,10 @@
 <head>
 	<title>Form</title>
 	<link href="..\CSS/form_style.css" rel="stylesheet" type="text/css"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-    <script src="..\JS/navbar_script.js" defer></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+  <script src="..\JS/navbar_script.js" defer></script>
 </head>
 <body>
 
