--- a/informationPage/index.html
+++ b/informationPage/index.html
@@ -6,7 +6,7 @@
     <link href="CSS/style.css" rel="stylesheet" type="text/css"/>
     <script src="JS/script.js" defer></script>
   </head>
-  <body>
+  <body >
 
     
 
@@ -22,7 +22,7 @@
             <li><a href="../index.html">Начало</a></li>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Контакти</a></li>
-            <li><a href="#">Регистрация</a></li>
+            <li><a href="../HTML/form.html">Регистрация</a></li>
           </ul>
         </div>
       </nav>
@@ -30,35 +30,35 @@
       <div class="row">
         
         <div class="col">
-            <h1>Fire Station Burgas</h1>
-            <p>---Here we display the newest data we collect from our units.---</p>
-            <button type="button">More Info</button>
+            <h1>Пожарна Бургас</h1>
+            <p>---Тука излиза най-новата информация за пожарната.---</p>
+
           </div>
         <div class="col">
           <a href="#sec-1">
             <div class="card card1">
               <div class="counters1"></div>
-              <h5>Firefighters</h5>
-              <p>Units currently Active.</p>
+              <h5>Пожарникари</h5>
+              <p>Брой на действащи пожарникари</p>
             </div>
           </a>
           <a href="#sec-2">
             <div class="card card2">
               <div class="counters2"></div>
-              <h5>Fire engines</h5>
-              <p>Units currently Active.</p>
+              <h5>Пожарни коли</h5>
+              <p>Брой на действащи пожарни коли</p>
             </div>
           </a>
           <a href="#sec-3">
           <div class="card card3">
-            <h5>Most areas with fires</h5>
-            <p>This is the current place where the most risk of fire is detected.</p>
+            <h5>Опасни са пожар райони</h5>
+            <p>Места в които има най-голяма опастност от пожари</p>
           </div>
         </a>
         <a href="#sec-4">
           <div class="card card4">
-            <h5>The most active firefighters</h5>
-            <p>Here we display the most effective firefighters for the month.</p>
+            <h5>Най-активни Пожарникари</h5>
+            <p>Пожарникари с най-много потошени пожари в месеца</p>
           </div>
         </a>
           </div>
@@ -88,24 +88,28 @@
               <a href="#">
                 <div class="cardbig card1">
                   <div class="counters1"></div>
-                  <h5>Firefighters</h5>
-                  <p>Units currently Active.</p>
+                  <h5>Пожарникари</h5>
+              <p>Брой на действащи пожарникари</p>
                 </div>
               </a>
+            <div class="Section-text"><h3>БРОЙ ПРОИЗШЕСТВИЯ И ИЗЛИЗАНИЯ НА ПРОТИВОПОЖАРНА И СПАСИТЕЛНА ТЕХНИКА</h3></div>
+              <div class="Section-img"><img src="img/table-1.jpg"></div>
             </div>
-            <iframe src="https://www.atlistmaps.com/map/10ac31ad-13bd-487e-b13d-c3d58701671b?share=true" allow="geolocation" width="25%" height="500px" frameborder="0" scrolling="no" allowfullscreen></iframe>      
+            <iframe src="https://www.atlistmaps.com/map/cfd17c2d-b395-40ac-9609-3a677fc27169?share=true" allow="geolocation"  frameborder="0" scrolling="no" allowfullscreen></iframe>      
                </section>
               <section id="sec-2">
                 <div class="content">
                     <a href="#">
                     <div class="cardbig card2">
                       <div class="counters2"></div>
-                      <h5>Fire engines</h5>
-              <p>Units currently Active.</p>
+                      <h5>Пожарни коли</h5>
+              <p>Брой на действащи пожарни коли</p>
                     </div>
                   </a>
+                  <div class="Section-text"><h3>БРОЙ ПРОИЗШЕСТВИЯ И ИЗЛИЗАНИЯ НА ПРОТИВОПОЖАРНА И СПАСИТЕЛНА ТЕХНИКА</h3></div>
+              <div class="Section-img"><img src="img/table-1.jpg"></div>
                 </div>
-            <iframe src="https://www.atlistmaps.com/map/10ac31ad-13bd-487e-b13d-c3d58701671b?share=true" allow="geolocation" width="25%" height="500px" frameborder="0" scrolling="no" allowfullscreen></iframe>   
+                <iframe src="https://www.atlistmaps.com/map/10ac31ad-13bd-487e-b13d-c3d58701671b?share=true" allow="geolocation" frameborder="0" scrolling="no" allowfullscreen></iframe>   
                   </section>
                   </section>
                 </section>
@@ -113,22 +117,27 @@
                   <div class="content">
                     <a href="#">
                       <div class="cardbig card3">
-                        <h5>Most areas with fires</h5>
-            <p>This is the current place where the most risk of fire is detected.</p>
+                        <h5>Опасни са пожар райони</h5>
+            <p>Места в които има най-голяма опастност от пожари</p>
                       </div>
                     </a>
-                  </div>
-            <iframe src="https://www.atlistmaps.com/map/10ac31ad-13bd-487e-b13d-c3d58701671b?share=true" allow="geolocation" width="25%" height="500px" frameborder="0" scrolling="no" allowfullscreen></iframe>   
+                    <div class="Section-text"><h3>БРОЙ ПРОИЗШЕСТВИЯ И ИЗЛИЗАНИЯ НА ПРОТИВОПОЖАРНА И СПАСИТЕЛНА ТЕХНИКА</h3></div>
+              <div class="Section-img"><img src="img/table-1.jpg"></div>
+                  </div>   
+                  <iframe src="https://www.atlistmaps.com/map/fbfba33d-da4b-4dba-9752-3d134ed555fe?share=true" allow="geolocation" frameborder="0" scrolling="no" allowfullscreen></iframe>
                     </section>
                   </section>
                   <section id="sec-4">
                     <div class="content">               
                       <a href="#">
                         <div class="cardbig card4">
-                          <h5>The most active firefighters</h5>
-            <p>Here we display the most effective firefighters for the month.</p>
+                          <h5>Най-активни Пожарникари</h5>
+            <p>Пожарникари с най-много потошени пожари в месеца</p>
                         </div>
                       </a>
+                      <div class="Section-4-text"><h2>Тука са представени най-ефективните</h2></div>
+                      <div class="Section-4-text"><h2>и значителните пожарникари:</h2></div>
+                      <div id="sequence"></div>
                     </div>
                       </section>
         </div>
