Fix Navbar links. Close #1

--- a/HTML/form.html
+++ b/HTML/form.html
@@ -18,8 +18,8 @@
       <div class="links">
         <ul>
           <li><a href="..\index.html">Начало</a></li>
-          <li><a href="..\information/index.html">Информация</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#">Информация</a></li>
+          <li><a href="contact.html">Контакти</a></li>
           <li><a href="form.html">Регистрация</a></li>
         </ul>
       </div>
@@ -104,7 +104,7 @@
             <div class="f-links">
               <ul>
                 <li><a href="form.html">Регистрация</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a href="contact.html">Контакти</a></li>
                 <li><a href="#">Информация за опасности</a></li>
                 <li><a href="#">Служители</a></li>
                 <li><a href="#">Класации</a></li>
