--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="f-links">
               <ul>
                 <li><a href="HTML/form.html">Регистрация</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a href="HTML/contact.html">Контакти</a></li>
                 <li><a href="#">Информация за опасности</a></li>
                 <li><a href="#">Служители</a></li>
                 <li><a href="#">Класации</a></li>
