Make changes to home page. Close #6

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <div class="container2">
         <h2>Най-скорошни инциденти</h2>
         <div class="accidents">
-          <p><img src="Images/notice.png"> Място №1</p>
-          <p><img src="Images/notice.png"> Място №2</p>
-          <p><img src="Images/notice.png"> Място №3</p>
+          <p><img src="Images/notice.png"> жк. "Зорница" бл.8</p>
+          <p><img src="Images/notice.png"> жк. "Възраждане" бл.36</p>
+          <p><img src="Images/notice.png"> жк. "Братя Миладинови", ул.Кавала №18</p>
         </div>
       </div>
     </div>
