--- a/informationPage/index.html
+++ b/informationPage/index.html
@@ -21,7 +21,7 @@
           <ul>
             <li><a href="../index.html">Начало</a></li>
             <li><a href="#">Информация</a></li>
-            <li><a href="#">Контакти</a></li>
+            <li><a href="../HTML/contact.html">Контакти</a></li>
             <li><a href="../HTML/form.html">Регистрация</a></li>
           </ul>
         </div>
@@ -93,7 +93,7 @@
                 </div>
               </a>
             <div class="Section-text"><h3>БРОЙ ПРОИЗШЕСТВИЯ И ИЗЛИЗАНИЯ НА ПРОТИВОПОЖАРНА И СПАСИТЕЛНА ТЕХНИКА</h3></div>
-              <div class="Section-img"><img src="img/table-1.jpg"></div>
+              <div class="Section-img"><img src="img/Tables/table-1.jpg"></div>
             </div>
             <iframe src="https://www.atlistmaps.com/map/cfd17c2d-b395-40ac-9609-3a677fc27169?share=true" allow="geolocation"  frameborder="0" scrolling="no" allowfullscreen></iframe>      
                </section>
@@ -106,8 +106,8 @@
               <p>Брой на действащи пожарни коли</p>
                     </div>
                   </a>
-                  <div class="Section-text"><h3>БРОЙ ПРОИЗШЕСТВИЯ И ИЗЛИЗАНИЯ НА ПРОТИВОПОЖАРНА И СПАСИТЕЛНА ТЕХНИКА</h3></div>
-              <div class="Section-img"><img src="img/table-1.jpg"></div>
+                  <div class="Section-text"><h3>ПОЖАРИ С МАТЕРИАЛНИ ЗАГУБИ, РАЗПРЕДЕЛЕНИ ПО ПРИЧИНИ ЗА ВЪЗНИКВАНЕ</h3></div>
+              <div class="Section-img"><img src="img/Tables/table-2.jpg"></div>
                 </div>
                 <iframe src="https://www.atlistmaps.com/map/10ac31ad-13bd-487e-b13d-c3d58701671b?share=true" allow="geolocation" frameborder="0" scrolling="no" allowfullscreen></iframe>   
                   </section>
@@ -121,8 +121,8 @@
             <p>Места в които има най-голяма опастност от пожари</p>
                       </div>
                     </a>
-                    <div class="Section-text"><h3>БРОЙ ПРОИЗШЕСТВИЯ И ИЗЛИЗАНИЯ НА ПРОТИВОПОЖАРНА И СПАСИТЕЛНА ТЕХНИКА</h3></div>
-              <div class="Section-img"><img src="img/table-1.jpg"></div>
+                    <div class="Section-text"><h3> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp ПОЖАРИ С МАТЕРИАЛНИ ЗАГУБИ, РАЗПРЕДЕЛЕНИ ПО ОТРАСЛИ</h3></div>
+              <div class="Section-img"><img src="img/Tables/table-3.jpg"></div>
                   </div>   
                   <iframe src="https://www.atlistmaps.com/map/fbfba33d-da4b-4dba-9752-3d134ed555fe?share=true" allow="geolocation" frameborder="0" scrolling="no" allowfullscreen></iframe>
                     </section>
