Add options to form. Close #8

--- a/HTML/form.html
+++ b/HTML/form.html
@@ -60,6 +60,8 @@
               <option value="option1">Екип 1</option>
               <option value="option2">Екип 2</option>
               <option value="option3">Екип 3</option>
+              <option value="option3">Екип 4</option>
+              <option value="option3">Екип 5</option>
             </select>
           </div>
         </div> 
