--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -61,7 +61,7 @@
       <table>
         <tr>
           <td id="coloumn1">
-            <div class="f-logo"><img src="logo.png"></div>
+            <div class="f-logo"><img src="..\Images/logo_bgremoved.png"></div>
 
             <div class="f-links">
               <ul>
