Change firefighter names

--- a/informationPage/index.html
+++ b/informationPage/index.html
@@ -170,12 +170,12 @@
 
           <tr id="trow">
             <td>Екип 2</td>
-            <td>Милена Йорданова, Данислав Божидаров, Иван Костадинов, Боромир Трендафилов, Петър Господинов</td>
+            <td>Мириам Георгиева, Данислав Божидаров, Иван Костадинов, Боромир Трендафилов, Петър Господинов</td>
           </tr>
 
           <tr id="trow">
             <td>Екип 3</td>
-            <td>Николай Захариев, Хари Потър, Божидар Иванов, Ангела Костова, Андрей Лилов</td>
+            <td>Николай Захариев, Хари Потър, Божидар Иванов, Тереза Опанска, Андрей Лилов</td>
           </tr>
 
           <tr id="trow">
@@ -185,7 +185,7 @@
 
           <tr id="trow">
             <td>Екип 5</td>
-            <td>Джон Маклейн, Лио Живков, Майкъл Джексън, Теодор Адамс, Радослав Димитров</td>
+            <td>Джон Маклейн, Лио Живков, Майкъл Джексън, Теодор Карчев, Радослав Димитров</td>
           </tr>
         </tbody>
       </table>
