Sort information page

--- a/HTML/information.html
+++ b/HTML/information.html
@@ -5,10 +5,11 @@
     <title>Home</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="CSS/style.css" rel="stylesheet" type="text/css"/>
+    <link href="..\CSS/info_style.css" rel="stylesheet" type="text/css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-    <script src="JS/script.js" defer></script>
+    <script src="..\JS/navbar_script.js" defer></script>
+    <script src="..\JS/info_script.js"></script>
   </head>
 
   <body>
@@ -16,7 +17,7 @@
     <nav class="navbar">
       <div class="logo">The Firestarters</div>
 
-      <a href="#" class="button"><img src="Images/bars.png"></a>
+      <a href="#" class="button"><img src="..\Images/bars.png"></a>
 
       <div class="links">
         <ul>
@@ -54,14 +55,14 @@
 
         <a href="#sec-3">
           <div class="card card3">
-            <h5>Опасни са пожар райони</h5>
+            <h5>Пожароопасни райони</h5>
             <p>Места в които има най-голяма опастност от пожари</p>
           </div>
         </a>
 
         <a href="#sec-4">
           <div class="card card4">
-            <h5>Най-активни Пожарникари</h5>
+            <h5>Най-активни пожарникари</h5>
             <p>Пожарникари с най-много потошени пожари в месеца</p>
           </div>
         </a>
@@ -101,7 +102,7 @@
         </a>
 
         <div class="table">
-          <h3>БРОЙ ПРОИЗШЕСТВИЯ И ИЗЛИЗАНИЯ НА ПРОТИВОПОЖАРНА И СПАСИТЕЛНА ТЕХНИКА</h3>
+          <h3>РАЗПРЕДЕЛЕНИЕ НА ПОЖАРНИКАРСКИТЕ ЕКИПИ</h3>
 
           <div class="table">
       <table>
@@ -118,12 +119,12 @@
 
           <tr id="trow">
             <td>Екип 2</td>
-            <td>Милена Йорданова, Данислав Божидаров, Иван Костадинов, Боромир Трендафилов, Петър Господинов</td>
+            <td>Мириам Георгиева, Данислав Божидаров, Иван Костадинов, Боромир Трендафилов, Петър Господинов</td>
           </tr>
 
           <tr id="trow">
             <td>Екип 3</td>
-            <td>Николай Захариев, Хари Потър, Божидар Иванов, Ангела Костова, Андрей Лилов</td>
+            <td>Николай Захариев, Хари Потър, Божидар Иванов, Тереза Опанска, Андрей Лилов</td>
           </tr>
 
           <tr id="trow">
@@ -133,7 +134,7 @@
 
           <tr id="trow">
             <td>Екип 5</td>
-            <td>Джон Маклейн, Лио Живков, Майкъл Джексън, Теодор Адамс, Радослав Димитров</td>
+            <td>Джон Маклейн, Лио Живков, Майкъл Джексън, Теодор Карчев, Радослав Димитров</td>
           </tr>
         </tbody>
       </table>
@@ -153,7 +154,7 @@
         </a>
 
         <div class="table">
-          <h3>БРОЙ ПРОИЗШЕСТВИЯ И ИЗЛИЗАНИЯ НА ПРОТИВОПОЖАРНА И СПАСИТЕЛНА ТЕХНИКА</h3>
+          <h3>РАЗПРЕДЕЛЕНИЕ НА ПОЖАРНИТЕ АВТОМОБИЛИ</h3>
 
           <div class="table">
       <table>
@@ -198,7 +199,7 @@
       <div id="sec-3">
         <a href="#">
           <div class="cardbig card3">
-            <h5>Опасни са пожар райони</h5>
+            <h5>Пожароопасни райони</h5>
             <p>Места в които има най-голяма опастност от пожари</p>
           </div>
         </a>
@@ -253,7 +254,7 @@
       <div id="sec-4">
         <a href="#">
           <div class="cardbig card4">
-            <h5>Най-активни Пожарникари</h5>
+            <h5>Най-активни пожарникари</h5>
             <p>Пожарникари с най-много потошени пожари в месеца</p>
           </div>
         </a>
@@ -270,7 +271,7 @@
       <table>
         <tr>
           <td id="coloumn1">
-            <div class="f-logo"><img src="logo.png"></div>
+            <div class="f-logo"><img src="..\Images/logo_bgremoved.png"></div>
 
             <div class="f-links">
               <ul>
