Fix navbar links

--- a/HTML/information.html
+++ b/HTML/information.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Home</title>
+    <title>Information</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="..\CSS/info_style.css" rel="stylesheet" type="text/css"/>
@@ -21,10 +21,10 @@
 
       <div class="links">
         <ul>
-          <li><a href="index.html">Начало</a></li>
-          <li><a href="#">Информация</a></li>
-          <li><a href="HTML/contact.html">Контакти</a></li>
-          <li><a href="HTML/form.html">Регистрация</a></li>
+          <li><a href="..\index.html">Начало</a></li>
+          <li><a href="information.html">Информация</a></li>
+          <li><a href="contact.html">Контакти</a></li>
+          <li><a href="form.html">Регистрация</a></li>
         </ul>
       </div>
     </nav>
@@ -275,11 +275,11 @@
 
             <div class="f-links">
               <ul>
-                <li><a href="HTML/form.html">Регистрация</a></li>
-                <li><a href="HTML/contact.html">Контакти</a></li>
-                <li><a href="#">Информация за опасности</a></li>
-                <li><a href="#">Служители</a></li>
-                <li><a href="#">Класации</a></li>
+                <li><a href="form.html">Регистрация</a></li>
+                <li><a href="contact.html">Контакти</a></li>
+                <li><a href="information.html#sec-3">Информация за опасности</a></li>
+                <li><a href="information.html#sec-1">Служители</a></li>
+                <li><a href="information.html#sec-4">Класации</a></li>
               </ul>
             </div>
           </td>
