--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="links">
         <ul>
           <li><a href="index.html">Начало</a></li>
-          <li><a href="#">Информация</a></li>
+          <li><a href="HTML/information.html">Информация</a></li>
           <li><a href="HTML/contact.html">Контакти</a></li>
           <li><a href="HTML/form.html">Регистрация</a></li>
         </ul>
@@ -58,9 +58,9 @@
               <ul>
                 <li><a href="HTML/form.html">Регистрация</a></li>
                 <li><a href="HTML/contact.html">Контакти</a></li>
-                <li><a href="#">Информация за опасности</a></li>
-                <li><a href="#">Служители</a></li>
-                <li><a href="#">Класации</a></li>
+                <li><a href="HTML/information.html#sec-3">Информация за опасности</a></li>
+                <li><a href="HTML/information.html#sec-1">Служители</a></li>
+                <li><a href="HTML/information.html#sec-4">Класации</a></li>
               </ul>
             </div>
           </td>
