--- a/HTML/form.html
+++ b/HTML/form.html
@@ -18,7 +18,7 @@
       <div class="links">
         <ul>
           <li><a href="..\index.html">Начало</a></li>
-          <li><a href="#">Информация</a></li>
+          <li><a href="information.html">Информация</a></li>
           <li><a href="contact.html">Контакти</a></li>
           <li><a href="form.html">Регистрация</a></li>
         </ul>
@@ -107,9 +107,9 @@
               <ul>
                 <li><a href="form.html">Регистрация</a></li>
                 <li><a href="contact.html">Контакти</a></li>
-                <li><a href="#">Информация за опасности</a></li>
-                <li><a href="#">Служители</a></li>
-                <li><a href="#">Класации</a></li>
+                <li><a href="information.html#sec-3">Информация за опасности</a></li>
+                <li><a href="information.html#sec-1">Служители</a></li>
+                <li><a href="information.html#sec-4">Класации</a></li>
               </ul>
             </div>
           </td>
