Fix spelling mistakes

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -36,19 +36,19 @@
         <br>
 
         <h3>Първа РСПБЗН-Бургас</h3>
-        <p>гр. Бургас, ул. „ Александър Велики” № 37 Б</p>
-        <p>телефон: 056/856665</p>
-        <p>email: rspbzn_burgas-01@mvr.bg</p>
+        <p>8000 гр. Бургас, ул. „ Александър Велики” № 37 Б</p>
+        <p>Телефон: 056/856665</p>
+        <p>Email: rspbzn_burgas-01@mvr.bg</p>
         <p>Началник на Първа РСПБЗН-Бургас - главен инспектор Николай Николаев</p>
-        <p>приемен ден: вторник от 10:00 до 12:00 часа</p>
+        <p>Приемен ден: вторник от 10:00 до 12:00 часа</p>
         <br>
 
         <h3>Втора РСПБЗН-Бургас</h3>
         <p>8000 гр. Бургас, ул. „ Александър Велики” № 37 Б</p>
-        <p>телефон: 056/856285</p>
-        <p>email:  rspbzn_burgas-02@mvr.bg</p>
-        <p>Началник на Втора РСПБЗН-Бургас главен инспектор Деян Стоянов</p>
-        <p>приемен ден: вторник от 14:00 до 16:00 часа</p>
+        <p>Телефон: 056/856285</p>
+        <p>Email: rspbzn_burgas-02@mvr.bg</p>
+        <p>Началник на Втора РСПБЗН-Бургас - главен инспектор Деян Стоянов</p>
+        <p>Приемен ден: вторник от 14:00 до 16:00 часа</p>
         <br>
       </div>
 
@@ -77,7 +77,7 @@
           <td id="coloumn2">
             <div class="information">
               <h4>Пожарна Община Бургас</h4>
-              <p>ул."Александър Велики" 37В, 8000 Възраждане, Бургас</p>
+              <p>ул. "Александър Велики" 37В, 8000 Възраждане, Бургас</p>
               <p>056 856 321</p>
             </div>
 
