--- a/HTML/information.html
+++ b/HTML/information.html
@@ -32,7 +32,7 @@
     <div class="row">
         
       <div class="col1">
-          <h1>Пожарна Бургас</h1>
+          <h1>РСПБЗН-Бургас</h1>
           <h3>Тук излиза най-новата информация за пожарната.</h3>
       </div>
 
@@ -41,7 +41,7 @@
           <div class="card card1">
             <div class="counters1"></div>
             <h5>Пожарникари</h5>
-            <p>Брой на действащи пожарникари</p>
+            <p>Брой действащи пожарникари</p>
           </div>
         </a>
 
@@ -49,7 +49,7 @@
           <div class="card card2">
             <div class="counters2"></div>
             <h5>Пожарни коли</h5>
-            <p>Брой на действащи пожарни коли</p>
+            <p>Брой действащи пожарни коли</p>
           </div>
         </a>
 
@@ -63,7 +63,7 @@
         <a href="#sec-4">
           <div class="card card4">
             <h5>Най-активни пожарникари</h5>
-            <p>Пожарникари с най-много потошени пожари в месеца</p>
+            <p>Пожарникари с най-много потушени пожари за месеца</p>
           </div>
         </a>
       </div>
@@ -97,7 +97,7 @@
           <div class="cardbig card1">
             <div class="counters1"></div>
             <h5>Пожарни коли</h5>
-            <p>Брой на действащи пожарни коли</p>
+            <p>Брой действащи пожарникари</p>
           </div>
         </a>
 
@@ -149,7 +149,7 @@
           <div class="cardbig card2">
             <div class="counters2"></div>
             <h5>Пожарни коли</h5>
-            <p>Брой на действащи пожарни коли</p>
+            <p>Брой действащи пожарни коли</p>
           </div>
         </a>
 
@@ -255,12 +255,12 @@
         <a href="#">
           <div class="cardbig card4">
             <h5>Най-активни пожарникари</h5>
-            <p>Пожарникари с най-много потошени пожари в месеца</p>
+            <p>Пожарникари с най-много потушени пожари за месеца</p>
           </div>
         </a>
                       
         <div class="Section-4">
-          <h2>Тук са представени най-ефективните и значителните пожарникари:</h2>
+          <h2>Тук са представени най-ефективните и значими пожарникари:</h2>
           <h1 id="sequence"></h1>
         </div>
       </div>
@@ -287,7 +287,7 @@
           <td id="coloumn2">
             <div class="information">
               <h4>Пожарна Община Бургас</h4>
-              <p>ул."Александър Велики" 37В, 8000 Възраждане, Бургас</p>
+              <p>ул. "Александър Велики" 37В, 8000 Възраждане, Бургас</p>
               <p>056 856 321</p>
             </div>
 
