--- a/HTML/form.html
+++ b/HTML/form.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
   <script src="..\JS/navbar_script.js" defer></script>
+  <script src="..\JS/form_script.js"></script>
 </head>
 <body>
 
@@ -25,7 +26,7 @@
       </div>
     </nav>
 
-    <form method="POST">
+    <form method="POST" onsubmit="alertSubmissionMessage()">
       <h1>Регистрация</h1>
 
       <p>* Форма за регистриране на произшествие.</p>
