--- a/HTML/form.html
+++ b/HTML/form.html
@@ -12,7 +12,7 @@
 <body>
 
 	<nav class="navbar">
-      <div class="logo">The Firestarters</div>
+    <div class="logo"><img src="../Images/logo_bgremoved.png"></div>
 
       <a href="#" class="button"><img src="..\Images/bars.png"></a>
 
